# md2jira

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  convert_markdown_to_jira_tickets.sh  data_epic.json.in  data_story.json.in  data_subtask.json.in  example-full.md  example.md  main.py  md2jira.py  pyproject.toml  requirements.txt  test_cli.sh
src/: md2jira.py
test/: test_checklists.py  test_crud.py  test_issue_creation.py  test_skip_unchanged.py
