[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "md2jira"
version = "1.0.0"
description = "Convert Markdown into JIRA issues"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Daniel Racanelli", email = "dracanelli@wbgames.com"}
]
dependencies = [
    "certifi>=2023.11.17",
    "python-dotenv>=1.0.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
md2jira = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["src"]

